--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "msgpack-lite": "0.1.26"
   },
   "devDependencies": {
+    "@types/benchmark": "1.0.30",
     "@types/chai": "4.0.4",
     "@types/faker": "4.1.1",
     "@types/long": "3.0.32",
     "@types/mocha": "2.2.44",
     "@types/msgpack-lite": "0.1.5",
+    "benchmark": "2.1.4",
     "chai": "4.1.2",
     "faker": "4.1.0",
     "mocha": "4.0.1",
