--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "js.spec": "1.0.0-15",
     "long": "3.2.0",
     "msgpack-lite": "0.1.26"
   },
@@ -15,6 +16,7 @@
     "@types/benchmark": "1.0.30",
     "@types/chai": "4.0.4",
     "@types/faker": "4.1.1",
+    "@types/js.spec": "1.0.1",
     "@types/long": "3.0.32",
     "@types/mocha": "2.2.44",
     "@types/msgpack-lite": "0.1.6",
@@ -24,7 +26,7 @@
     "mocha": "4.0.1",
     "rimraf": "2.6.2",
     "ts-node": "3.3.0",
-    "typescript": "2.5.3"
+    "typescript": "2.6.1"
   },
   "scripts": {
     "build:commonjs": "rimraf lib && tsc --target es5 --outDir lib --module commonjs --declaration",
