--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
       "es6"
     ],
     "alwaysStrict": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true
+//    "noImplicitAny": true
+    "strictNullChecks": true
   },
   "include": [
     "src/**/*"
