Switch back to straight msgpack-lite as it doesn't actually return google longs from decoding Added specific encoding for long type to use google longs and encode them compactly in msgpack Added forAny factory method to exported identifiers Added round-trip tests for exported identifiers Fixed bad source-map interactions in mocha

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "js.spec": "1.0.0-15",
     "long": "3.2.0",
-    "msgpack-long-lite": "0.1.0"
+    "msgpack-lite": "0.1.26"
   },
   "devDependencies": {
     "@types/benchmark": "1.0.31",
