--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai": "4.1.2",
     "faker": "4.1.0",
     "istanbul": "0.4.5",
+    "js.spec-chai": "0.1.6",
     "mocha": "4.0.1",
     "nyc": "11.3.0",
     "rimraf": "2.6.2",
