--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "2.6.2"
   },
   "scripts": {
+    "clean": "rimraf es lib coverage .nyc_output yarn-error.log",
     "build:commonjs": "rimraf lib && tsc --target es5 --outDir lib --module commonjs --declaration",
     "build:es": "rimraf es && tsc --target es6 --outDir es --module es6",
     "build": "npm run build:commonjs && npm run build:es",
