Bring support for base32 encoding into identifiers. Add support for JSON generation and parsing.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
       "src/**/*.ts"
     ],
     "exclude": [
+      "src/base32/benchmark.ts",
       "src/base128/benchmark.ts",
       "src/base128/generate-table.ts"
     ],
