--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "clean": "rimraf es lib coverage .nyc_output yarn-error.log",
     "build:commonjs": "rimraf lib && tsc --target es5 --outDir lib --module commonjs --declaration",
     "build:es": "rimraf es && tsc --target es6 --outDir es --module es6",
-    "build": "npm run build:commonjs && npm run build:es",
+    "build": "yarn run build:commonjs && yarn run build:es",
     "ts": "ts-node src/",
     "test": "mocha --opts mocha.opts",
     "coverage": "nyc mocha --opts mocha.opts",
