--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "es6"
     ],
     "alwaysStrict": true,
-//    "noImplicitAny": true
+    "noImplicitAny": true,
     "strictNullChecks": true
   },
   "include": [
