Re-org property assignment so that codec is last and es5 generated code has a more complete generated ID object.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
+    "alwaysStrict": true,
     "declaration": true,
     "lib": [
       "es6"
     ],
-    "alwaysStrict": true,
     "noImplicitAny": true,
-    "strictNullChecks": true
+    "pretty": true,
+    "strictNullChecks": true,
+    "sourceMap": true
   },
   "include": [
     "src/**/*"
