--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
     "alwaysStrict": true,
-    "declaration": true,
     "lib": [
       "es6"
     ],
+    "module": "commonjs",
     "noImplicitAny": true,
+    "outDir": "./lib",
     "pretty": true,
+    "sourceMap": true,
     "strictNullChecks": true,
-    "sourceMap": true
+    "target": "es5"
   },
   "include": [
     "src/**/*"
