--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "exclude": [
       "src/base32/benchmark.ts",
       "src/base128/benchmark.ts",
-      "src/base128/generate-table.ts"
+      "src/base128/generate-table.ts",
       "src/base32/generate-table.ts"
     ],
     "extension": [
