--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "coveralls": "3.0.0",
     "faker": "4.1.0",
     "istanbul": "0.4.5",
-    "js.spec-chai": "0.1.6",
+    "js.spec-chai": "0.1.7",
     "mocha": "5.0.1",
     "mocha-lcov-reporter": "1.3.0",
     "nyc": "11.4.1",
     "rimraf": "2.6.2",
     "source-map-support": "0.5.3",
-    "ts-loader": "3.5.0",
-    "ts-node": "5.0.0",
+    "ts-loader": "4.0.0",
+    "ts-node": "5.0.1",
     "typescript": "2.7.2",
-    "webpack": "3.11.0"
+    "webpack": "4.0.1",
+    "webpack-cli": "2.0.10"
   },
   "scripts": {
     "clean": "rimraf lib dist coverage .nyc_output yarn-error.log",
