--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/chai": "4.1.2",
     "@types/faker": "4.1.2",
     "@types/long": "3.0.32",
-    "@types/mocha": "2.2.48",
+    "@types/mocha": "5.0.0",
     "@types/msgpack-lite": "0.1.6",
     "benchmark": "2.1.4",
     "chai": "4.1.2",
@@ -26,21 +26,21 @@
     "faker": "4.1.0",
     "istanbul": "0.4.5",
     "js.spec-chai": "0.1.7",
-    "mocha": "5.0.1",
+    "mocha": "5.0.5",
     "mocha-lcov-reporter": "1.3.0",
-    "nyc": "11.4.1",
+    "nyc": "11.6.0",
     "rimraf": "2.6.2",
-    "source-map-support": "0.5.3",
-    "ts-loader": "4.0.1",
+    "source-map-support": "0.5.4",
+    "ts-loader": "4.1.0",
     "ts-node": "5.0.1",
     "typescript": "2.7.2",
-    "webpack": "4.1.0",
-    "webpack-cli": "2.0.10"
+    "webpack": "4.2.0",
+    "webpack-cli": "2.0.13"
   },
   "scripts": {
-    "clean": "rimraf lib dist coverage .nyc_output yarn-error.log",
+    "clean": "rimraf lib dist coverage .nyc_output browser-test yarn-error.log",
     "build:commonjs": "rimraf lib && tsc",
-    "build:webpack": "rimraf dist && node_modules/.bin/webpack",
+    "build:webpack": "rimraf dist browser-test && node_modules/.bin/webpack",
     "build": "yarn run build:commonjs & yarn run build:webpack",
     "test": "mocha --opts mocha.opts",
     "coverage": "nyc mocha --opts mocha.opts && nyc report --reporter=text-lcov | coveralls",
