Moved symbol table generators to /spec

--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
     ],
     "exclude": [
       "src/base32/benchmark.ts",
-      "src/base32/generate-table.ts",
-      "src/base128/benchmark.ts",
-      "src/base128/generate-table.ts"
+      "src/base128/benchmark.ts"
     ],
     "extension": [
       ".ts"
