--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "identifiers-js",
   "version": "0.0.1",
   "description": "JS Identifiers implementation",
-  "keywords": "TODO",
+  "keywords": [
+    "TODO"
+  ],
   "main": "./lib/index.js",
   "repository": "https://www.github.com/Identifiers/identifiers-js",
   "author": "Matt Bishop (https://www.github.com/mattbishop)",
@@ -34,9 +36,9 @@
     "source-map-support": "0.5.4",
     "ts-loader": "4.1.0",
     "ts-node": "5.0.1",
-    "typescript": "2.7.2",
-    "webpack": "4.2.0",
-    "webpack-cli": "2.0.13"
+    "typescript": "2.8.1",
+    "webpack": "4.5.0",
+    "webpack-cli": "2.0.14"
   },
   "scripts": {
     "clean": "rimraf lib coverage .nyc_output browser-test yarn-error.log",
