Upgrade dependencies. Change tck to use a yarn-approved module name for spec.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "geo"
   ],
   "main": "./lib/index.js",
-  "repository": "https://www.github.com/Identifiers/identifiers-js",
-  "author": "Matt Bishop (https://www.github.com/mattbishop)",
+  "repository": "https://github.com/Identifiers/identifiers-js",
+  "author": "Matt Bishop (https://github.com/mattbishop)",
   "license": "MIT",
   "private": false,
   "dependencies": {
@@ -25,28 +25,28 @@
   },
   "devDependencies": {
     "@types/benchmark": "1.0.31",
-    "@types/chai": "4.1.2",
+    "@types/chai": "4.1.3",
     "@types/faker": "4.1.2",
     "@types/long": "3.0.32",
-    "@types/mocha": "5.0.0",
+    "@types/mocha": "5.2.0",
     "@types/msgpack-lite": "0.1.6",
     "benchmark": "2.1.4",
     "chai": "4.1.2",
     "coveralls": "3.0.0",
     "faker": "4.1.0",
-    "identifiers-spec": "git://github.com/Identifiers/spec.git",
     "istanbul": "0.4.5",
     "js.spec-chai": "0.1.7",
-    "mocha": "5.1.0",
+    "mocha": "5.1.1",
     "mocha-lcov-reporter": "1.3.0",
-    "nyc": "11.6.0",
+    "nyc": "11.7.1",
     "rimraf": "2.6.2",
     "source-map-support": "0.5.4",
+    "spec": "git://github.com/Identifiers/spec.git",
     "ts-loader": "4.2.0",
-    "ts-node": "5.0.1",
-    "typescript": "2.8.1",
-    "webpack": "4.5.0",
-    "webpack-cli": "2.0.14"
+    "ts-node": "6.0.0",
+    "typescript": "2.8.3",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15"
   },
   "scripts": {
     "clean": "rimraf lib coverage .nyc_output browser-test yarn-error.log",
