--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "build:webpack": "rimraf browser-test && node_modules/.bin/webpack",
     "build": "yarn run clean & yarn run build:commonjs & yarn run build:webpack",
     "test": "mocha --opts mocha.opts",
-    "benchmark": "ts-node benchmark",
+    "benchmark": "node --prof -r ts-node/register benchmark",
     "coverage": "nyc mocha --opts mocha.opts && nyc report --reporter=text-lcov | coveralls",
     "prepublishOnly": "yarn run build"
   },
