--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ts-loader": "4.4.1",
     "ts-node": "6.1.2",
     "typescript": "2.9.2",
+    "v8-profiler": "5.7.0",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.8"
   },
@@ -56,7 +57,8 @@
     "build:webpack": "rimraf browser-test && node_modules/.bin/webpack",
     "build": "yarn run clean & yarn run build:commonjs & yarn run build:webpack",
     "test": "mocha --opts mocha.opts",
-    "benchmark": "node --prof -r ts-node/register benchmark",
+    "benchmark": "ts-node benchmark",
+    "prof": "node --prof -r ts-node/register benchmark",
     "coverage": "nyc mocha --opts mocha.opts && nyc report --reporter=text-lcov | coveralls",
     "prepublishOnly": "yarn run build"
   },
