--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
   },
   "devDependencies": {
     "@types/benchmark": "1.0.31",
-    "@types/chai": "4.1.3",
-    "@types/faker": "4.1.2",
+    "@types/chai": "4.1.4",
+    "@types/faker": "4.1.3",
     "@types/long": "4.0.0",
-    "@types/mocha": "5.2.3",
+    "@types/mocha": "5.2.5",
     "@types/msgpack-lite": "0.1.6",
     "benchmark": "2.1.4",
     "chai": "4.1.2",
-    "coveralls": "3.0.1",
+    "coveralls": "3.0.2",
     "faker": "4.1.0",
     "istanbul": "0.4.5",
     "js.spec-chai": "0.1.7",
     "mocha": "5.2.0",
     "mocha-lcov-reporter": "1.3.0",
-    "nyc": "12.0.2",
+    "nyc": "13.0.1",
     "rimraf": "2.6.2",
-    "source-map-support": "0.5.6",
+    "source-map-support": "0.5.9",
     "spec": "git://github.com/Identifiers/spec.git",
-    "ts-loader": "4.4.1",
-    "ts-node": "6.1.2",
-    "typescript": "2.9.2",
+    "ts-loader": "5.0.0",
+    "ts-node": "7.0.1",
+    "typescript": "3.0.3",
     "v8-profiler": "5.7.0",
-    "webpack": "4.12.0",
-    "webpack-cli": "3.0.8"
+    "webpack": "4.17.1",
+    "webpack-cli": "3.1.0"
   },
   "scripts": {
     "clean": "rimraf lib coverage .nyc_output .browser-test yarn-error.log",
@@ -58,7 +58,7 @@
     "build": "yarn run clean & yarn run build:commonjs & yarn run build:webpack",
     "test": "mocha --opts mocha.opts",
     "benchmark": "ts-node benchmark",
-    "prof": "node --prof -r ts-node/register benchmark",
+    "prof": "node --trace-deopt -r ts-node/register benchmark",
     "coverage": "nyc mocha --opts mocha.opts && nyc report --reporter=text-lcov | coveralls",
     "prepublishOnly": "yarn run build"
   },
