Pass TCK with composite IDs, mixedHuman encoding.

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "nyc": "13.0.1",
     "rimraf": "2.6.2",
     "source-map-support": "0.5.9",
-    "spec": "git+https://github.com/Identifiers/spec.git",
+    "spec": "identifiers/spec#120d4c7",
     "ts-loader": "5.0.0",
     "ts-node": "7.0.1",
     "typescript": "3.0.3",
