--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "geo"
   ],
   "main": "./lib/index.js",
+  "types": "./lib/types-export.d.ts",
   "repository": "https://github.com/Identifiers/identifiers-js",
   "author": "Matt Bishop (https://github.com/mattbishop)",
   "license": "MIT",
@@ -28,7 +29,7 @@
   "devDependencies": {
     "@types/benchmark": "1.0.31",
     "@types/chai": "4.1.4",
-    "@types/faker": "4.1.3",
+    "@types/faker": "4.1.4",
     "@types/long": "4.0.0",
     "@types/mocha": "5.2.5",
     "@types/msgpack-lite": "0.1.6",
@@ -44,11 +45,12 @@
     "rimraf": "2.6.2",
     "source-map-support": "0.5.9",
     "spec": "identifiers/spec#120d4c7",
-    "ts-loader": "5.0.0",
+    "ts-loader": "5.1.0",
     "ts-node": "7.0.1",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
     "typescript": "3.0.3",
     "v8-profiler": "5.7.0",
-    "webpack": "4.17.2",
+    "webpack": "4.19.0",
     "webpack-cli": "3.1.0"
   },
   "scripts": {
@@ -64,7 +66,8 @@
   },
   "files": [
     "src",
-    "lib"
+    "lib",
+    "typings"
   ],
   "nyc": {
     "include": [
