--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "typescript": "3.1.6",
     "v8-profiler": "5.7.0",
-    "webpack": "4.24.0",
+    "webpack": "4.25.0",
     "webpack-cli": "3.1.2"
   },
   "scripts": {
-    "clean": "rimraf lib coverage .nyc_output .browser-test yarn-error.log",
+    "clean": "rimraf lib dist coverage .nyc_output .browser-test yarn-error.log",
     "build:commonjs": "tsc",
     "build:webpack-test": "rimraf .browser-test && node_modules/.bin/webpack --config=webpack/webpack.dev.config.js",
     "build:webpack": "rimraf dist && node_modules/.bin/webpack --config=webpack/webpack.prod.config.js",
@@ -67,7 +67,6 @@
   "files": [
     "src",
     "lib",
-    "typings",
     "dist"
   ],
   "nyc": {
