Update libs, use new TS 3.4 feature.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "lib",
+    "incremental": true,
+    "tsBuildInfoFile": ".tsbuildinfo",
     "lib": [
       "es6"
     ],
