--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "msgpack-typed-numbers": "^0.0.1"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "0.1.3",
     "@types/benchmark": "1.0.31",
     "@types/chai": "4.1.7",
     "@types/faker": "4.1.5",
@@ -36,7 +37,6 @@
     "chai": "4.2.0",
     "coveralls": "3.0.3",
     "faker": "4.1.0",
-    "istanbul": "0.4.5",
     "js.spec-chai": "0.1.7",
     "mocha": "6.1.4",
     "mocha-lcov-reporter": "1.3.0",
@@ -69,16 +69,9 @@
     "dist"
   ],
   "nyc": {
-    "include": [
-      "src/**/*.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
+    "extends": "@istanbuljs/nyc-config-typescript",
     "reporter": [
       "html"
-    ],
-    "sourceMap": true,
-    "all": true
+    ]
   }
 }
