--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "es6"
     ],
     "module": "commonjs",
+    "moduleResolution": "node",
     "outDir": "./lib",
     "pretty": true,
     "sourceMap": true,
