--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.1",
-    "@types/benchmark": "1.0.31",
-    "@types/chai": "4.2.9",
-    "@types/faker": "4.1.10",
+    "@types/benchmark": "2.1.0",
+    "@types/chai": "4.2.14",
+    "@types/faker": "5.1.4",
     "@types/long": "4.0.1",
-    "@types/mocha": "7.0.1",
-    "@types/node": "10.17.16",
+    "@types/mocha": "8.0.4",
+    "@types/node": "10.17.47",
     "benchmark": "2.1.4",
     "chai": "4.2.0",
-    "coveralls": "3.0.9",
-    "faker": "4.1.0",
+    "coveralls": "3.1.0",
+    "faker": "5.1.0",
     "js.spec-chai": "0.1.7",
-    "mocha": "7.1.0",
+    "mocha": "8.2.1",
     "mocha-lcov-reporter": "1.3.0",
-    "nyc": "15.0.0",
+    "nyc": "15.1.0",
     "rimraf": "3.0.2",
-    "source-map-support": "0.5.16",
+    "source-map-support": "0.5.19",
     "spec": "identifiers/spec#9119f8c0bfde8a9cf466aeec04a5d2ee533d82a3",
-    "ts-loader": "6.2.1",
-    "ts-node": "8.6.2",
-    "tsconfig-paths-webpack-plugin": "3.2.0",
-    "typescript": "3.8.2",
-    "webpack": "4.41.6",
-    "webpack-cli": "3.3.11"
+    "ts-loader": "8.0.11",
+    "ts-node": "9.0.0",
+    "tsconfig-paths-webpack-plugin": "3.3.0",
+    "typescript": "4.1.2",
+    "webpack": "5.6.0",
+    "webpack-cli": "4.2.0"
   },
   "scripts": {
     "clean": "rimraf lib dist coverage .nyc_output .browser-test yarn-error.log",
@@ -57,7 +57,7 @@
     "build:webpack-test": "rimraf .browser-test && node_modules/.bin/webpack --config=webpack/webpack.dev.config.js",
     "build:webpack": "rimraf dist && node_modules/.bin/webpack --config=webpack/webpack.prod.config.js",
     "build": "yarn run clean & yarn run build:commonjs & yarn run build:webpack",
-    "test": "mocha --opts mocha.opts",
+    "test": "mocha --config=mocha.yaml",
     "benchmark": "ts-node benchmark",
     "prof": "node --trace-deopt -r ts-node/register benchmark",
     "coverage": "nyc mocha --opts mocha.opts && nyc report --reporter=text-lcov | coveralls",
