--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "private": false,
   "dependencies": {
     "js.spec": "^1.0.0-23",
-    "long": "^4.0.0",
-    "msgpack-typed-numbers": "^0.0.1"
+    "msgpackr": "^1.1.2"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.1",
@@ -38,6 +37,7 @@
     "coveralls": "3.1.0",
     "faker": "5.2.0",
     "js.spec-chai": "0.1.7",
+    "long": "4.0.0",
     "mocha": "8.2.1",
     "mocha-lcov-reporter": "1.3.0",
     "nyc": "15.1.0",
@@ -48,7 +48,7 @@
     "ts-node": "9.1.1",
     "tsconfig-paths-webpack-plugin": "3.3.0",
     "typescript": "4.1.3",
-    "webpack": "5.17.0",
+    "webpack": "5.19.0",
     "webpack-cli": "4.4.0"
   },
   "scripts": {
